--- a/app-ejb/src/main/webapp/home.xhtml
+++ b/app-ejb/src/main/webapp/home.xhtml
@@ -2,49 +2,66 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:pm="http://primefaces.org/mobile">
 
 <h:head>
     <title>Driver Rest UI</title>
     <h:outputStylesheet library="css" name="style.css"  />
 </h:head>
 
-<ui:fragment rendered="#{identity.loggedIn}">
+<h:body>
+    <pm:page>
+<!--<p:layout fullPage="true">-->
+    <!--<p:layoutUnit header="11111" position="north" size="50">-->
+        <!--<h:outputText value="Top content." />-->
+    <!--</p:layoutUnit>-->
+    <!--<p:layoutUnit footer="0000" position="south" size="100">-->
+        <!--<h:outputText value="Bottom content." />-->
+    <!--</p:layoutUnit>-->
+    <!--<p:layoutUnit position="west" size="300">-->
+        <!--<h:outputText value="Left content" />-->
+    <!--</p:layoutUnit>-->
+    <!--<p:layoutUnit position="east" size="200">-->
+        <!--<h:outputText value="Right Content" />-->
+    <!--</p:layoutUnit>-->
+    <!--<p:layoutUnit position="center">-->
+
+<p:fragment autoUpdate="true" rendered="#{identity.loggedIn}">
     <br />
     <h1>Hello, #{identity.account.firstName}!</h1>
     <br />
 
     <div class="container">
+        <p:clock />
         <h2>Driver Status</h2>
 
         <h:form id="driverStatusResponse">
-            <h:panelGrid columns="2">
-                <h:outputLabel>Your current status:</h:outputLabel>
-                <h:outputLabel value="#{driverBean.driverStatusMessage}" />
-            </h:panelGrid>
+            <p:panelGrid columns="2">
+                <p:outputLabel>Your current status:</p:outputLabel>
+                <p:outputLabel value="#{driverStatus}" />
+            </p:panelGrid>
         </h:form>
+
+        <p:separator />
 
         <h:form id="driverStatusForm">
 
             <p>Select new status :</p>
-            <h:selectOneRadio value="#{driverStatus}">
+            <p:selectOneRadio value="#{driverStatus}" layout="pageDirection">
                 <f:selectItem itemValue="free" itemLabel="Free" />
                 <f:selectItem itemValue="shift" itemLabel="In Shift" />
                 <f:selectItem itemValue="driving" itemLabel="Driving" />
-            </h:selectOneRadio>
+            </p:selectOneRadio>
             <br />
 
-            <h:commandButton value="Change" action="#{driverBean.setDriverStatus(driverStatus)}" />
-            <!--<h:commandButton value="Reset" type="reset" />-->
-            <br />
-            <br />
-
-            <h:outputLink class="mini-container"
-                          value="http://localhost:8080/logiweb-ee/rest/driver/#{identity.account.loginName}/status/#{driverStatus}" >
-                <p>Save</p>
-            </h:outputLink>
-
+            <h:commandButton value="SOAP Save" action="#{driverBean.setDriverStatus(identity.account.loginName, driverStatus)}" />
         </h:form>
+        <h:messages id="driverPsuedoGlobalMessages" for="driverStatusForm" globalOnly="true"
+                    infoStyle="color:green" errorStyle="color:red" warnClass="color:orange" />
+        <h:messages id="driverClientMessages" rendered="#{not empty facesContext.getMessageList('driverStatusForm')}"
+                    globalOnly="false" infoStyle="color:green" errorStyle="color:red" warnClass="color:orange" />
     </div>
 
     <br />
@@ -57,14 +74,15 @@
         <h:form id="freightStatusResponse">
             <h:panelGrid columns="2">
                 <h:outputLabel> Current status of freight #{freightID}:</h:outputLabel>
-                <h:outputLabel value="#{driverBean.freightStatusMessage}" />
+                <h:outputLabel value="#{freightStatus}" />
             </h:panelGrid>
         </h:form>
 
         <h:form id="freightStatusForm">
 
-            <h:outputLabel for="freightID" value="Freight ID" />
+            <!--<h:outputLabel for="freightID" value="Freight ID" />-->
             <h:inputText id="freightID" value="#{freightID}"/>
+            <p:watermark for="freightID" value="Freight ID" />
 
             <p>Select new status :</p>
             <h:selectOneRadio value="#{freightStatus}">
@@ -73,24 +91,19 @@
             </h:selectOneRadio>
             <br />
 
-            <h:commandButton value="Change" action="#{driverBean.setFreightStatus(freightStatus)}" />
-            <!--<h:commandButton value="Reset" type="reset" />-->
-            <br />
-            <br />
-
-            <h:outputLink class="mini-container"
-                          value="http://localhost:8080/logiweb-ee/rest/freight/#{freightID}/status/#{freightStatus}" >
-                <p>Save</p>
-            </h:outputLink>
-
+            <h:commandButton value="REST Save" action="#{driverBean.setFreightStatus(freightID, freightStatus)}" />
         </h:form>
+        <h:messages id="freightPsuedoGlobalMessages" for="freightStatusForm" globalOnly="true"
+                    infoStyle="color:green" errorStyle="color:red" warnClass="color:orange" />
+        <h:messages id="freightClientMessages" rendered="#{not empty facesContext.getMessageList('freightStatusForm')}"
+                    globalOnly="false" infoStyle="color:green" errorStyle="color:red" warnClass="color:orange" />
     </div>
 
 
     <h:form>
         <h:commandButton id="logout" value="Log out" action="#{identity.logout}"/>
     </h:form>
-</ui:fragment>
+</p:fragment>
 
 <h:form id="loginForm" rendered="#{not identity.loggedIn}">
     <h:messages globalOnly="true"/>
@@ -98,13 +111,18 @@
     <div class="container">
 
         <div class="loginRow">
-            <h:outputLabel for="name" value="Driver #" styleClass="loginLabel"/>
-            <h:inputText id="name" value="#{loginCredentials.userId}"/>
+            <!--<p:outputLabel for="ID" value="Driver #" styleClass="loginLabel"/>-->
+            <h:inputText id="ID" value="#{loginCredentials.userId}" required="true"/>
+            <p:watermark for="ID" value="Driver ID" />
+            <h:message for="ID" style="color: red"/>
         </div>
+        <br />
 
         <div class="loginRow">
-            <h:outputLabel for="password" value="Password" styleClass="loginLabel"/>
-            <h:inputSecret id="password" value="#{loginCredentials.password}" redisplay="true"/>
+            <!--<p:outputLabel for="password" value="Password" styleClass="loginLabel"/>-->
+            <h:inputSecret id="password" value="#{loginCredentials.password}" redisplay="true" required="true"/>
+            <p:watermark for="password" value="Password" />
+            <h:message for="password" style="color: red"/>
         </div>
     </div>
     <br />
@@ -113,5 +131,10 @@
         <h:commandButton id="login" value="Login" action="#{identity.login}" styleClass="loginButton"/>
     </div>
 </h:form>
+
+    <!--</p:layoutUnit>-->
+<!--</p:layout>-->
+    </pm:page>
+</h:body>
 
 </html>
