--- a/app-ejb/src/main/webapp/home.xhtml
+++ b/app-ejb/src/main/webapp/home.xhtml
@@ -34,7 +34,7 @@
     <br />
 
     <div class="container">
-        <p:clock />
+        <p:clock autoSync="true" />
         <h2>Driver Status</h2>
 
         <h:form id="driverStatusResponse">
